Add CPU acceleration and resumable variant QC